--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,14 @@
 						<docencoding>UTF-8</docencoding>
 					</configuration>
 				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>2.19</version>
+					<configuration>
+						<argLine>-Xmx4096m</argLine>
+					</configuration>
+				</plugin>
 			</plugins>
 		</pluginManagement>
 	</build>
