--- a/pom.xml
+++ b/pom.xml
@@ -77,12 +77,14 @@
 			<artifactId>javase</artifactId>
 			<version>3.4.0</version>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/net.sf.barcode4j/barcode4j -->
+
+		<!-- https://mvnrepository.com/artifact/org.bouncycastle/bcprov-jdk15on -->
 		<dependency>
-			<groupId>net.sf.barcode4j</groupId>
-			<artifactId>barcode4j</artifactId>
-			<version>2.1</version>
+			<groupId>org.bouncycastle</groupId>
+			<artifactId>bcprov-jdk15on</artifactId>
+			<version>1.62</version>
 		</dependency>
+
 	</dependencies>
 	<build>
 		<pluginManagement>
