--- a/pom.xml
+++ b/pom.xml
@@ -131,7 +131,7 @@
 					<artifactId>maven-surefire-plugin</artifactId>
 					<version>2.19</version>
 					<configuration>
-						<argLine>-Xmx4096m -XX:+HeapDumpOnOutOfMemoryError</argLine>
+						<argLine>-Xms1G -Xmx4G</argLine>
 					</configuration>
 				</plugin>
 			</plugins>
